# safe_math

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
doc/: README.html  crates.js  help.html  search-index.js  settings.html  src-files.js
doc/safe_math/: all.html  fn.safe_add.html  fn.safe_multiply.html  index.html  sidebar-items.js
doc/search.desc/safe_math/: safe_math-desc-0-.js
doc/src/safe_math/: safe_operations.rs.html
src/: safe_operations.rs
