[package]
name = "safe_math"
version = "1.1.1"
edition = "2021"
authors = ["xdDudeGuy"]
license = "GPL-3.0-only"
description = "Math without overflow, creates an enum and a macro to help mitigate any overflow while multiplying and adding"
repository = "https://github.com/XDDudeGuy/safe_math"
keywords = ["math", "overflow"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/safe_operations.rs"
edition = "2021"
crate-type = ["lib"]

[dependencies]