[package]
name = "safe_math_legacy"
version = "1.1.2"
edition = "2021"
authors = ["xdDudeGuy"]
license = "GPL-3.0-only"
description = "Deprecated! Math without overflow, creates an enum and a macro to help mitigate any overflow while multiplying and adding"
repository = "https://github.com/XDDudeGuy/safe_math"
keywords = ["math", "overflow", "legacy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/safe_operations.rs"
edition = "2021"
crate-type = ["lib"]

[dependencies]